<resources>
    <string name="app_name">ActivityEjemplo2020</string>
    <string name="operando1">Operando 1</string>
    <string name="operando2">Operando 2</string>
    <string name="operacion">Operacion</string>
    <string name="ejecutar">Ejecutar Operacion</string>
    <string name="resultado">Resultado</string>
    <string-array name="operaciones">
        <item>Suma(+)</item>
        <item>Resta (-)</item>
        <item>Multiplicacion (*)</item>
        <item>Division (/)</item>
    </string-array>
    <string name="pregunta1">Ingresa tu nombre rapido?</string>
</resources>
