<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/operando1"/>
                <EditText
                    android:id="@+id/txtOp1"
                    android:inputType="number"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/operando2"/>
                <EditText
                    android:id="@+id/txtOp2"
                    android:inputType="number"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/operacion"/>
                <Spinner
                    android:id="@+id/spnOp"
                    android:layout_width="0dp"
                    android:entries="@array/operaciones"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnOperar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ejecutar"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lytResultado"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/resultado"/>
                <TextView
                    android:id="@+id/txtRespuesta"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:textSize="25sp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>